--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -43,6 +43,6 @@ WORKDIR /var/www
 
 USER $user
 
-#CMD ["sh", "-c", "cp -n .env.example .env && composer install && php artisan key:generate && php-fpm"]
+CMD ["sh", "-c", "cp -n .env.example .env && composer install && php artisan key:generate && php-fpm"]
 
 EXPOSE 9000
