--- a/insure_brother/.env.example
+++ b/insure_brother/.env.example
@@ -17,7 +17,7 @@ DB_PASSWORD=root
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=rabbitmq
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -49,3 +49,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_VHOST=/
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
