--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
     logging:
       driver: 'none'  # disable saving logs
     ports:
-      - 1025:1025 # smtp server
+      - 1025:1025 # smtp server ***
       - 8025:8025 # web ui
     networks:
       - insure_brother
