--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,13 +57,13 @@ services:
     networks:
       - insure_brother
 
-  mailhog:
-    image: mailhog/mailhog
-    logging:
-      driver: 'none'  # disable saving logs
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
+    container_name: 'elasticsearch'
+    environment:
+      - discovery.type=single-node
     ports:
-      - 1025:1025 # smtp server ***
-      - 8025:8025 # web ui
+      - 9200:9200
     networks:
       - insure_brother
 
