добавил создание, обновление, удаление и поиск документов elasticsearch. поле поиск на главной страницы

--- a/insure_brother/.env.example
+++ b/insure_brother/.env.example
@@ -55,3 +55,6 @@ RABBITMQ_PORT=5672
 RABBITMQ_VHOST=/
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
+
+ELASTICSEARCH_HOST=elasticsearch
+ELASTICSEARCH_PORT=9200
