--- a/insure_brother/composer.json
+++ b/insure_brother/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "php-amqplib/php-amqplib": "^v3.0.0",
-        "vladimir-yuldashev/laravel-queue-rabbitmq": "^11.3"
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^11.3",
+        "elasticsearch/elasticsearch": "7.10.*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
